# slurm-waiting-times

./: .gitignore  README.md  pyproject.toml
src/slurm_waiting_times/: __init__.py  cli.py  histogram.py  models.py  output.py  processing.py  sacct.py  time_utils.py
tests/: test_cli_tokens.py  test_histogram.py  test_output.py  test_processing.py  test_sacct.py  test_time_utils.py
