[project]
name = "slurm-waiting-times"
version = "0.1.0"
description = "CLI for analyzing Slurm job waiting times"
authors = [{name = "AutoGPT", email = "autogpt@example.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.7",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.scripts]
slurm-waiting-times = "slurm_waiting_times.cli:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
